[metadata]
name = bitshares
description = Python library for bitshares
description_file = README.md
author = Fabian Schuh
author_email = Fabian@chainsquad.com
maintainer = Fabian Schuh
maintainer_email = Fabian@chainsquad.com
url = https://github.com/bitshares/python-bitshares
keywords =
    bitshares
    library
    api
    rpc
# See https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Version Control :: Git
[options]
python_requires = >= 3.6
packages = find:
setup_requires =
   pytest-runner

[aliases]
test=pytest

[coverage:run]
source=bitsharesbase,bitsharesapi,bitshares
omit=
   tests/*
   .tox/*
   .eggs/*

[coverage:report]
include=bitshares*
ignore_errors=True
show_missing=True
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if sys.version > '3':

[flake8]
select = C,E,F,W,B,B950
ignore = E501,F401,E203,W503,B950,E722,B001
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/conf.py,
max-complexity = 20
max-line-length = 88

[isort]
atomic=true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
line_length = 88
known_third_party =
include_trailing_comma = true

[semantic_release]
version_variable = setup.py:__version__
upload_to_repository = true
